# circuit-analytics

./: LICENSE.md  README.md  env.sh  pyproject.toml
circuit_analytics/: config.py  errors.py  mods.py  server.py  utils.py  verify_config.py
circuit_analytics/drivers/: __init__.py  announcer.py  cat.py  condition_filtering.py  crt.py  oracle.py  protocol_math.py  recharge_auction.py  registry.py  savings.py  statutes.py  surplus_auction.py  treasury.py  vault.py
circuit_analytics/scanner/: block_scanner.py  cli.py  models.py  stats.py
circuit_analytics/scanner/handlers/: announcer.py  base.py  cat.py  governance.py  oracle.py  recharge_auction.py  registry.py  savings.py  singleton_isa.py  surplus_auction.py  treasury.py  vault.py
defillama-adapters/: README.md
defillama-adapters/fees/: circuitdao.ts
defillama-adapters/treasury/: circuitdao.js
defillama-adapters/yield/circuit/: index.js
tests/: conftest.py  test_rescan.py  test_scanner.py
